--- a/src/Components/Friends/Friends.module.css
+++ b/src/Components/Friends/Friends.module.css
@@ -1,10 +1,11 @@
 .friends{
     margin: 40px 20px;
 }
-.friends a:nth-child(n+3){
+.friends p:nth-child(n+3){
     margin-left: 7px;
 
 }
-.friends a{
+.friends p{
+    display: inline-block;
     font-size: small;
 }
