--- a/src/Components/Messages/Dialogs.module.css
+++ b/src/Components/Messages/Dialogs.module.css
@@ -37,8 +37,10 @@ box-sizing:border-box;
     border-radius: 5px;
     box-shadow: 1px 2px 5px black;
     width:fit-content;
+    max-width: 95%;
     padding: 5px;
     margin: 5px;
+    overflow-wrap: break-word;
 }
 .active{
 
