--- a/src/Components/Users/Users.module.css
+++ b/src/Components/Users/Users.module.css
@@ -1,9 +1,61 @@
-.mainCon{
-    flex:80%;
+.mainCon {
+    flex: 80%;
 }
-.dialogsLeft{
+
+.dialogsLeft {
     background-color: #2a9d8f;
     height: 100%;
-
 }
 
+.ava {
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+}
+
+.box {
+    min-width: 300px;
+    display: inline-block;
+    height: 81px;
+    background-color: antiquewhite;
+    width: 100%;
+    color: darkblue;
+    position: relative;
+    margin-bottom: 8px;
+
+}
+.selectedPage{
+    background-color: #2a9d8f;
+    margin:0 4px
+
+}
+.pageNum{
+    margin:0 4px
+}
+.pageNum:hover{
+    cursor:pointer;
+}
+.avaSec {
+    display: inline-block;
+    width: 75px;
+    margin-bottom: 15px;
+    border: 2px solid antiquewhite;
+    background-color: #2a9d8f;
+    border-radius: 5px;
+    color:antiquewhite;
+    font-weight: bold;
+    text-align: center;
+}
+.avaSec button{
+    width:100%;
+    background-color: #f4a261;
+    color:whitesmoke;
+    font-weight: bold;
+}
+.location {
+    opacity: 0.7;
+    font-size: 12px;
+    position: absolute;
+    right: 5px;
+    bottom: 2px;
+}
